--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         for Your Business
                     </h1>
                     <button class="button-fororder" type="button">Order Service</button>
-                    <form class="form-box-first-section">
+                    <!-- <form class="form-box-first-section">
                         <a href="" class="icon-close-box">
                             <svg class="icon-close-style" width="24" height="24" aria-label="icon close">
                                 <use href="./images/icons.svg#icon-close"></use>
@@ -69,7 +69,7 @@
                         </div>
                         <button class="button-fororder" type="submit">Send</button>
 
-                    </form>
+                    </form> -->
                 </div>
             </section>
             <section class="section">
@@ -381,7 +381,61 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-subscribe-section">
+                    <p class="footer-subscribe-sign">Subscribe</p>
+                    <form class="form-bottom">
+                        <label>
+                            <input class="email-field-footer" type="email" name="Email" placeholder="E-mail">
+                        </label>
+                        <button type="submit" class="button-subscribe-footer">Subscribe
+                            <svg width="24" height="24" class="icon-subscribe-footer"><use href="./images/icons.svg#icon-subscribe"></use></svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </footer>
+        <div class="modal-shadow">
+            <div class="modal-ground">
+                <button type="button" class="modal-button">
+                    <svg width="8" height="8" class="modal-close-icon"><use href="./images/icons.svg#icon-close"></use></svg>
+                </button>
+                <p class="modal-explanation">Leave your contacts and we will call you back</p>
+                <form class="modal-form-general">
+                    <div class="modal-form-first">
+                        <label class="modal-label-style" for="user-name">Name</label>
+                        <div class="modal-input-and-icon">
+                            <input id="user-name" type="text" name="user-name" class="modal-input-style">
+                            <svg width="18" height="24" class="modal-input-icon-style"><use href="./images/icons.svg#icon-person-form"></use></svg>
+                        </div>
+                    </div class="modal-form-first">
+                    <div class="modal-form-first">
+                        <label class="modal-label-style" for="user-email">Phone</label>
+                        <div class="modal-input-and-icon">
+                            <input id="user-phone" type="text" name="user-phone" class="modal-input-style">
+                            <svg width="18" height="24" class="modal-input-icon-style"><use href="./images/icons.svg#icon-phone"></use></svg>
+                        </div>
+                    </div>
+                    <div class="modal-form-first">
+                        <label class="modal-label-style" for="user-email">Email</label>
+                        <div class="modal-input-and-icon">
+                            <input id="user-email" type="text" name="user-email" class="modal-input-style">
+                            <svg width="18" height="24" class="modal-input-icon-style"><use href="./images/icons.svg#icon-email"></use></svg>
+                        </div>
+                    </div>
+                    <div class="modal-comment-block">
+                        <label class="modal-label-style" for="user-comment">Comment</label>
+                        <textarea  class="modal-comment-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                    </div>
+                    <div class="modal-checkbox-container">
+                        <input class="modal-checkbox visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
+                        <label class="modal-checkbox-label" for="user-privacy"><span class="modal-checkbox-label-span">
+                            <svg width="10" height="8" class="modal-checkbox-icon"><use href="./images/icons.svg#icon-checkbox"></use></svg>
+                        </span>I accept the terms and conditions of the <a class="modal-privacy-policy-style" href="">Privacy Policy</a>
+                        </label>
+                    </div>
+                    <button class="modal-send-button">Send</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
