--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
                 <div class="footer-subscribe-section">
                     <p class="footer-subscribe-sign">Subscribe</p>
                     <form class="form-bottom">
-                        <label>
-                            <input class="email-field-footer" type="email" name="Email" placeholder="E-mail">
+                        <label class="label-footer">
+                            <input class="email-field-footer" type="email" name="email" placeholder="E-mail">
                         </label>
                         <button type="submit" class="button-subscribe-footer">Subscribe
                             <svg width="24" height="24" class="icon-subscribe-footer"><use href="./images/icons.svg#icon-subscribe"></use></svg>
@@ -378,7 +378,7 @@
                             <input id="user-name" type="text" name="user-name" class="modal-input-style">
                             <svg width="18" height="24" class="modal-input-icon-style"><use href="./images/icons.svg#icon-person-form"></use></svg>
                         </div>
-                    </div class="modal-form-first">
+                    </div>
                     <div class="modal-form-first">
                         <label class="modal-label-style" for="user-email">Phone</label>
                         <div class="modal-input-and-icon">
@@ -398,7 +398,7 @@
                         <textarea  class="modal-comment-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                     </div>
                     <div class="modal-checkbox-container">
-                        <input class="modal-checkbox visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
+                        <input class="modal-checkbox visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy" checked>
                         <label class="modal-checkbox-label" for="user-privacy"><span class="modal-checkbox-label-span">
                             <svg width="10" height="8" class="modal-checkbox-icon"><use href="./images/icons.svg#icon-checkbox"></use></svg>
                         </span>I accept the terms and conditions of the <a class="modal-privacy-policy-style" href="">Privacy Policy</a>
