--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         <textarea  class="modal-comment-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                     </div>
                     <div class="modal-checkbox-container">
-                        <input class="modal-checkbox visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy" checked>
+                        <input class="modal-checkbox visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
                         <label class="modal-checkbox-label" for="user-privacy"><span class="modal-checkbox-label-span">
                             <svg width="10" height="8" class="modal-checkbox-icon"><use href="./images/icons.svg#icon-checkbox"></use></svg>
                         </span>I accept the terms and conditions of the <a class="modal-privacy-policy-style" href="">Privacy Policy</a>
