--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
                 </div>
             </div>
         </footer>
-        <div class="modal-shadow">
+        <div class="modal-shadow is-open">
             <div class="modal-ground">
                 <button type="button" class="modal-button">
-                    <svg width="8" height="8" class="modal-close-icon"><use href="./images/icons.svg#icon-close"></use></svg>
+                    <svg width="24" height="24" class="modal-close-icon"><use href="./images/icons.svg#icon-close"></use></svg>
                 </button>
                 <p class="modal-explanation">Leave your contacts and we will call you back</p>
                 <form class="modal-form-general">
@@ -400,7 +400,7 @@
                     <div class="modal-checkbox-container">
                         <input class="modal-checkbox visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
                         <label class="modal-checkbox-label" for="user-privacy"><span class="modal-checkbox-label-span">
-                            <svg width="10" height="8" class="modal-checkbox-icon"><use href="./images/icons.svg#icon-checkbox"></use></svg>
+                            <svg width="16" height="16" class="modal-checkbox-icon"><use href="./images/icons.svg#icon-checkbox"></use></svg>
                         </span>I accept the terms and conditions of the <a class="modal-privacy-policy-style" href="">Privacy Policy</a>
                         </label>
                     </div>
