--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </div>
             </div>
         </footer>
-        <div class="modal-shadow is-open">
+        <div class="modal-shadow">
             <div class="modal-ground">
                 <button type="button" class="modal-button">
                     <svg width="24" height="24" class="modal-close-icon"><use href="./images/icons.svg#icon-close"></use></svg>
